openshift/manifests/18-validatingadmissionpolicybinding-openshift-operator-controller-operator-controller-clusterextensions-package-uniqueness-binding.yml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: operator-controller-clusterextensions-package-uniqueness-binding
  namespace: openshift-operator-controller
spec:
  paramRef:
    parameterNotFoundAction: Allow
    selector: {}
  policyName: operator-controller-clusterextensions-package-uniqueness
  validationActions:
    - Deny
